# Linera

./: README.md
linera-tic-tac-toe/: CORRECT_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  validate_project.sh
linera-tic-tac-toe/backend/: package.json  server.js
linera-tic-tac-toe/docs/: SMART CONTRACT.md
linera-tic-tac-toe/frontend/: package.json
linera-tic-tac-toe/frontend/public/: index.html
linera-tic-tac-toe/frontend/src/: App.css  App.js  App.test.js  index.css
linera-tic-tac-toe/frontend/src/components/: GameBoard.css  GameBoard.js  GameBoard.test.js  GameList.css  GameList.js  GameList.test.js  PlayerStats.css  PlayerStats.js  PlayerStats.test.js
linera-tic-tac-toe/src/: contract.rs  lib.rs  service.rs  state.rs
linera-tic-tac-toe/tests/: contract_tests.rs
