[package]
name = "linera-tic-tac-toe"
version = "0.1.0"
edition = "2021"
description = "A Tic Tac Toe game built on Linera blockchain"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
linera-base = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
linera-core = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
linera-execution = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "tic-tac-toe-contract"
path = "src/contract.rs"

[[bin]]
name = "tic-tac-toe-service"
path = "src/service.rs"
